force-app/main/default/objects/renci__c/renci__c.object-meta.xml
<CustomObject>
    <label>Öğrenci</label>
    <nameField>
        <label>Öğrenci İsimleri</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Öğrenciler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>