force-app/main/default/objects/renci__c/fields/DO_UM_TAR_H__c.field-meta.xml
<CustomField>
    <fullName>DO_UM_TAR_H__c</fullName>
    <label>DOĞUM TARİHİ</label>
    <type>Date</type>
</CustomField>