force-app/main/default/objects/renci__c/fields/Kay_t__c.field-meta.xml
<CustomField>
    <fullName>Kay_t__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Kayıt</label>
    <referenceTo>Kay_t__c</referenceTo>
    <relationshipLabel>Öğrenciler</relationshipLabel>
    <relationshipName>renciler</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>