force-app/main/default/objects/renci__c/fields/YA__c.field-meta.xml
<CustomField>
    <fullName>YA__c</fullName>
    <formula>(TODAY() -  DO_UM_TAR_H__c ) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YAŞ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>