force-app/main/default/objects/renci__c/recordTypes/Lise_rencileri_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Lise_rencileri_Record_Type</fullName>
    <active>true</active>
    <label>Lise Öğrencileri Record Type</label>
</RecordType>