force-app/main/default/objects/renci__c/recordTypes/niversite_rencileri_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>niversite_rencileri_Record_Type</fullName>
    <active>true</active>
    <label>Üniversite Öğrencileri Record Type</label>
</RecordType>