force-app/main/default/objects/renci__c/recordTypes/Ortaokul_rencileri_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Ortaokul_rencileri_Record_Type</fullName>
    <active>true</active>
    <label>Ortaokul Öğrencileri Record Type</label>
</RecordType>