force-app/main/default/objects/renci__c/validationRules/Enrolment_date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrolment_date_rule</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR( TODAY() )  &lt;&gt; YEAR( Enrollment_Date__c )</errorConditionFormula>
    <errorDisplayField>Enrollment_Date__c</errorDisplayField>
    <errorMessage>Enrollment date should be current date</errorMessage>
</ValidationRule>