force-app/main/default/objects/renci__c/validationRules/MobilePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>MobilePhone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Mobile_Phone__c , &quot;([\\d]{11})?&quot;))</errorConditionFormula>
    <errorMessage>Numarayı doğru giriniz</errorMessage>
</ValidationRule>