force-app/main/default/objects/renci__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Enrollment_Date__c</columns>
    <columns>Kay_t__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>